--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/TVtem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAlignment="textEnd"
         tools:textSize="34sp" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/TVact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textAlignment="textEnd"
         android:textSize="48sp" />
 
     <include
         layout="@layout/botones"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
