--- a/app/src/main/res/layout/botones.xml
+++ b/app/src/main/res/layout/botones.xml
@@ -1,112 +1,286 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    app:layoutDescription="@xml/botones_scene" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layoutDescription="@xml/botones_scene">
+
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:columnCount="5"
-        app:rowCount="5"
-        app:rowOrderPreserved="false">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rowCount="5">
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_marginBottom="0px"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="0px"
+            android:onClick="borrar"
             android:padding="0px"
             android:text="CA"
+            android:textColorLink="#673AB7"
             android:textSize="50px"
-            app:layout_column="0" />
+            android:visibility="visible"
+            app:layout_column="0"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="125px"
-            android:layout_height="125px"
+            android:layout_width="155dp"
+            android:layout_height="80dp"
             android:layout_margin="0px"
+            android:onClick="borrar"
             android:padding="0px"
             android:text="C"
             android:textSize="50px"
-            app:layout_column="1" />
+            app:layout_column="1"
+            app:layout_columnSpan="2" />
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="125px"
-            android:layout_height="125px"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_margin="0px"
+            android:onClick="cambiarOperador"
             android:padding="0px"
             android:text="+"
             android:textSize="50px"
-            app:layout_column="2" />
+            app:layout_column="4"
+            app:layout_row="1" />
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="125px"
-            android:layout_height="125px"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_margin="0px"
+            android:onClick="cambiarOperador"
             android:padding="0px"
             android:text="-"
-            android:textSize="50px"
-            app:layout_column="3" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_margin="0px"
-            android:padding="0px"
-            android:text="%"
-            android:textSize="50px"
-            app:layout_column="4" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_margin="0px"
-            android:padding="0px"
-            android:text="x"
-            android:textSize="50px"
-            app:layout_column="0"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/button11"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_margin="0px"
-            android:padding="0px"
-            android:text="sen"
-            android:textSize="50px"
-            app:layout_column="1"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/button12"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_margin="0px"
-            android:padding="0px"
-            android:text="cos"
-            android:textSize="50px"
-            app:layout_column="2"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/button13"
-            android:layout_width="125px"
-            android:layout_height="125px"
-            android:layout_margin="0px"
-            android:padding="0px"
-            android:text="tag"
             android:textSize="50px"
             app:layout_column="3"
             app:layout_row="1" />
 
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:onClick="cambiarOperador"
+            android:padding="0px"
+            android:text="÷"
+            android:textSize="50px"
+            app:layout_column="4"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:onClick="cambiarOperador"
+            android:padding="0px"
+            android:text="x"
+            android:textSize="50px"
+            app:layout_column="3"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:onClick="optrigo"
+            android:padding="0px"
+            android:text="sen"
+            android:textSize="50px"
+            app:layout_column="3"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/button12"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:onClick="optrigo"
+            android:padding="0px"
+            android:text="cos"
+            android:textSize="50px"
+            app:layout_column="4"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/button13"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:onClick="optrigo"
+            android:padding="0px"
+            android:text="tag"
+            android:textSize="50px"
+            app:layout_column="4"
+            app:layout_row="4" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="8"
+            android:textColor="#050505"
+            app:layout_column="1"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="7"
+            android:textColor="#100C0C"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="9"
+            android:textColor="#050505"
+            app:layout_column="2"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="4"
+            android:textColor="#050505"
+            app:layout_column="0"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="5"
+            android:textColor="#050505"
+            app:layout_column="1"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button14"
+            android:layout_width="155dp"
+            android:layout_height="80dp"
+            android:layout_margin="0px"
+            android:onClick="igual"
+            android:padding="0px"
+            android:text="="
+            android:textSize="50px"
+            app:layout_column="3"
+            app:layout_columnSpan="2"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/button15"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="2"
+            android:textColor="#050505"
+            app:layout_column="1"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/button16"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="6"
+            android:textColor="#050505"
+            app:layout_column="2"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/button17"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="1"
+            android:textColor="#050505"
+            app:layout_column="0"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/button18"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="3"
+            android:textColor="#050505"
+            app:layout_column="2"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/button19"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="0"
+            android:textColor="#050505"
+            app:layout_column="0"
+            app:layout_row="4" />
+
+        <Button
+            android:id="@+id/button20"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_margin="0px"
+            android:backgroundTint="#CCC1C1"
+            android:onClick="seleccionarNumero"
+            android:padding="0px"
+            android:text="."
+            android:textColor="#050505"
+            app:layout_column="1"
+            app:layout_row="4" />
     </androidx.gridlayout.widget.GridLayout>
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
